this is a tricky effect to pull off, managing the spans restarting smoothly after they disappear from the screen. the issue I'm confronting now is adding margin to each span without making the effect jumpy

--- a/app/components/InfiniteMarquee/InfiniteMarquee.css
+++ b/app/components/InfiniteMarquee/InfiniteMarquee.css
@@ -14,6 +14,9 @@
   display: flex;
   position: relative;
   white-space: nowrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .marquee-content span {
@@ -21,5 +24,7 @@
   font-size: 18px;
   display: inline-block;
   border: 1px solid salmon;
-  /* margin-right: 0.5rem; */
+  height: 70px;
+  min-width: 200px;
+  text-wrap: wrap;
 }
